# zgeg

./: Cargo.toml  README.md  flake.nix  pegme.peg  zgeg.peg
crates/pegger/: Cargo.toml
crates/pegger/src/: dsl.rs  fmt.rs  lib.rs  packrat.rs  visit.rs
crates/pegger/src/grammar/: dsl.rs  fmt.rs  mod.rs  simplify.rs  visit.rs
crates/pegger/src/interpreter/: mod.rs
crates/pegger/src/tree/: builder.rs  fmt.rs  mod.rs
crates/pegme/: Cargo.toml
crates/pegme/src/: codegen.rs  cst.rs  grammar.rs  interpreter.rs  lib.rs  main.rs  meta.rs  packrat.rs
crates/pegme/src/cst/: builder.rs  fmt.rs
crates/pegme/src/grammar/: dsl.rs  fmt.rs  mod.rs  visit.rs
crates/pegme/src/interpreter/: mod.rs  v2.rs
crates/pegme/src/meta/: generated.rs  grammar.rs  tests.rs
crates/pegme_codegen/: Cargo.toml
crates/pegme_codegen/src/: lib.rs  parser.rs
crates/pegme_core/: Cargo.toml  README.md
crates/pegme_core/src/: cst.rs  grammar.rs  interpreter.rs  lib.rs  packrat.rs
crates/pegme_core/src/cst/: builder.rs  fmt.rs
crates/pegme_core/src/grammar/: dsl.rs  fmt.rs  simplify.rs  visit.rs
crates/pegme_meta/: Cargo.toml  build.rs
crates/pegme_meta/src/: lib.rs  tests.rs
crates/pegme_meta_grammar/: Cargo.toml  pegme.peg
crates/pegme_meta_grammar/src/: lib.rs
crates/zgegc/: Cargo.toml  build.rs  zgeg.peg
crates/zgegc/examples/: eval_grammar.rs  print_grammar.rs
crates/zgegc/src/: main.rs  parser.rs
tests/ui/: hello_world.zg
tree-sitter-zgeg/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-zgeg/bindings/c/: tree-sitter-zgeg.h  tree-sitter-zgeg.pc.in
tree-sitter-zgeg/bindings/go/: binding.go  binding_test.go
tree-sitter-zgeg/bindings/node/: binding.cc  index.js
tree-sitter-zgeg/bindings/python/tests/: test_binding.py
tree-sitter-zgeg/bindings/python/tree_sitter_zgeg/: __init__.py  binding.c
tree-sitter-zgeg/bindings/rust/: build.rs  lib.rs
tree-sitter-zgeg/bindings/swift/TreeSitterZgegTests/: TreeSitterZgegTests.swift
tree-sitter-zgeg/src/: grammar.json  node-types.json  parser.c
tree-sitter-zgeg/test/corpus/: hello.txt
zgeg/: Cargo.toml
zgeg/crates/zgegc/: Cargo.toml
zgeg/crates/zgegc/src/: main.rs
zgeg/crates/zgegc/src/ast/: mod.rs  nodes.rs  parser.rs
